<resources>
    <string name="app_name">Social.ly</string>

    <string-array name="Sports">
        <item>Gaming</item>
        <item>Sports</item>
        <item>Eating</item>
        <item>Music</item>
        <item>Art and Design</item>
        <item>Reading</item>
        <item>Cooking</item>
        <item>Dancing</item>
        <item>Photography</item>
        <item>Volunteering</item>
    </string-array>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Friends</string>
    <string name="title_explore">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="personalise_your_profile">Personalise your profile</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="profile_picture">Profile picture</string>
    <string name="short_description">Short Description</string>
    <string name="nickname">Nickname</string>
    <string name="interest">Interest</string>
    <string name="create_activity">Create Activity</string>
    <string name="im_interested">I am Interested!</string>

    <string name="interest_prompt">Select an interest</string>

    <string-array name="interest_array">
        <item>Gaming</item>
        <item>Sports</item>
        <item>Eating</item>
        <item>Music</item>
        <item>Art and Design</item>
        <item>Reading</item>
        <item>Cooking</item>
        <item>Dancing</item>
        <item>Photography</item>
        <item>Volunteering</item>
    </string-array>

    <string name="tab_text_1">Friends</string>
    <string name="tab_text_2">Activity</string>
</resources>
