<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".CreateActivityFragment"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Add Activity"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/act_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/profile_picture"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/Camera_Register2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/take_photo"
            android:foregroundGravity="left"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/Gallery_select_Register2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/image_gallery"
            android:foregroundGravity="left"
            android:src="@android:drawable/ic_menu_gallery" />

    </LinearLayout>




    <TextView
        android:id="@+id/activity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Activity Name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/new_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/act_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Description"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/new_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/act_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Location"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/new_actlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/act_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Time"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/new_acttime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"/>

    <TextView
        android:id="@+id/act_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Date"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/new_actdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"/>

    <Button
        android:id="@+id/Register_register2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_activity" />

</LinearLayout>
